--- a/mika.cfg
+++ b/mika.cfg
@@ -2,8 +2,8 @@
     "server": [
         {
             "address": "127.0.0.1",
-            "port": 7090,
-            "password": "password",
+            "port": 8388,
+            "password": "4n2giKQspvCG",
             "method": "aes-256-cfb",
         }
     ],
