--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ futures = "0.3.12"
 bytes = "1.0.1"
 rust-crypto = "0.2.36"
 hex = "0.4.2"
+base64 = "0.13.0"
+bstr = "0.2.15"
 
 [[bin]]
 name = "client"
