--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ hex = "0.4.2"
 base64 = "0.13.0"
 bstr = "0.2.15"
 clap = "2.33.3"
+log = { version = "0.4", features = ["std", "serde"] }
+pretty_env_logger = "0.4.0"
 
 [[bin]]
 name = "client"
