--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 tokio = { version = "1.2.0", features = ["full"] }
 rand = "0.8.3"
 serde_yaml = "0.8"
+serde_json = "1.0.64"
 serde = { version = "1.0", features = ["derive"] }
 aes-gcm = "0.8.0"
 futures = "0.3.13"
@@ -19,6 +20,7 @@ bstr = "0.2.15"
 clap = "2.33.3"
 log = { version = "0.4", features = ["std", "serde"] }
 pretty_env_logger = "0.4.0"
+hyper = { version = "0.14", features = ["full"] }
 
 [[bin]]
 name = "client"
