--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ log = { version = "0.4", features = ["std", "serde"] }
 pretty_env_logger = "0.4.0"
 hyper = { version = "0.14", features = ["full"] }
 url = "2.2.2"
+cidr = "0.2.1"
 
 [[bin]]
 name = "client"
